# aveverb

./: AveVerb.cabal  AveVerbSrv.cabal
doc/: proto.markdown
src/: Api.hs  Config.hs  Index.hs  InitDB.hs  InsertDB.hs  Main.hs  Server.hs
src/Api/: LemmeParser.hs  Process.hs  Types.hs
src/Util/: DBPrepare.hs  LemmeParser.hs
src/Utils/: InitDB.hs  InsertDB.hs  LemmeParser.hs  SamplePrepare.hs
static/: script.js  style.css
