name:                AveVerb
version:             0.2.1
synopsis:            AveVerb server based on Snap.
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable AveVerb
  main-is:             Server.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , transformers
                     , utf8-string
                     , containers
                     , snap-server
                     , snap-core
                     , mongoDB
                     , aeson 
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts

executable InitDB
  main-is:             Utils/InitDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , mongoDB
                     , containers
                     , parsec
  default-language:    Haskell2010
  hs-source-dirs:      src

executable InsertDB
  main-is:             Utils/InsertDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , mongoDB
                     , bytestring
                     , utf8-string
                     , regex-posix
  default-language:    Haskell2010
  hs-source-dirs:      src

