name:                AveVerb
version:             0.1.0
synopsis:            AveVerb server based on Happstack.
license:             MIT
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable AveVerb
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , TemplateHaskell
  build-depends:       base                 >= 4.6
                     , text                 >= 1.2
                     , aeson                >= 0.8
                     , utf8-string          >= 0.3
                     , bytestring           >= 0.10
                     , blaze-html           >= 0.7
                     , happstack-server     >= 7.4
                     , web-routes           >= 0.27
                     , web-routes-th        >= 0.22
                     , web-routes-happstack >= 0.23
                     , transformers         >= 0.4
                     , containers           >= 0.5
                     , binary               >= 0.7
                     , zlib                 >= 0.5
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts

