name:                AveVerb
version:             0.2.0
synopsis:            AveVerb server based on Happstack.
license:             MIT
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable AveVerb
  main-is:             Server.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.6
                     , blaze-html           >= 0.7
                     , happstack-server     >= 7.4
                     , web-routes           >= 0.27
                     , web-routes-th        >= 0.22
                     , web-routes-happstack >= 0.23
                     , transformers         >= 0.4
                     , mongoDB              >= 2.0
                     , aeson                >= 0.8
                     , split                >= 0.2
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts

executable InitDB
  main-is:             InitDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.6
                     , mongoDB              >= 2.0
                     , containers           >= 0.5
                     , parsec               >= 3.1
  default-language:    Haskell2010
  hs-source-dirs:      src

executable InsertDB
  main-is:             InsertDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.6
                     , mongoDB              >= 2.0
                     , bytestring           >= 0.10
                     , utf8-string          >= 0.3
                     , regex-posix          >= 0.95
  default-language:    Haskell2010
  hs-source-dirs:      src

