name:                AveVerb
version:             0.2.1
synopsis:            AveVerb server based on Snap.
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable AveVerb
  main-is:             Server.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.5
                     , transformers         >= 0.3
                     , utf8-string          >= 0.2
                     , containers           >= 0.4
                     , snap-server          >= 0.9
                     , snap-core            >= 0.9
                     , mongoDB              >= 2.0
                     , aeson                >= 0.7
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts

executable InitDB
  main-is:             Utils/InitDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.6
                     , mongoDB              >= 2.0
                     , containers           >= 0.5
                     , parsec               >= 3.1
  default-language:    Haskell2010
  hs-source-dirs:      src

executable InsertDB
  main-is:             Utils/InsertDB.hs
  other-extensions:    OverloadedStrings
  build-depends:       base                 >= 4.6
                     , mongoDB              >= 2.0
                     , bytestring           >= 0.10
                     , utf8-string          >= 0.3
                     , regex-posix          >= 0.95
  default-language:    Haskell2010
  hs-source-dirs:      src

